vercel.json file edit

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,5 @@
-
 {
-    "builds": [{
-        "src": "DevFolio/wsgi.py",
-        "use": "@vercel/python",
-        "config": { "maxLambdaSize": "15mb", "runtime": "python3.12.3" }
-    }],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "DevFolio/wsgi.py"
-        }
+    "rewrites": [
+      { "source": "/(.*)", "destination": "/" }
     ]
-}
+  }
